# chatGPTcodes

./: CMakeLists.txt  CMakeLists.txtBOOST  CMakeListsOpenCV.txt  MakefileOpenCV  Makefiletestassembly  Qiskit_adding2numbers.ipynb  README.md  READMEAGENT.md  a.out  agent_example.ipynb  agent_example.py  autograd.ipynb  bayesianinference.ipynb  ceemd.ipynb  chirp.ipynb  chirp0.ipynb  cnncifar100.ipynb  cnnclass.ipynb  cnngregression.ipynb  codetranslatorlang.ipynb  codetranslatornew.ipynb  codetranslatornew2.py  compchainlangchain.ipynb  convertbib.tex  convertmp4.ipynb  convertxls2doc.ipynb  convertxls2doc.py  convolutioncuda.cu  copilot.cc  cuda3dshared.cu  cuda_fwi_template.cu  cudateach1.cu  dalle_example.ipynb  dalle_examplenew.ipynb  datageneratorexample.ipynb  diffusionex.ipynb  dynamicWarping.cpp  dynamicwarping.ipynb  exmpi4py.ipynb  impvsexpFD.m  (+75 more)
FE/: fd1dwaveeq.ipynb  fe1d.ipynb  fe1dwaveeq.ipynb  fe2d.ipynb
GAI/: promptai.ipynb
deepseek/: dlmodel.ipynb  huggingfaceex.ipynb  llmodel.ipynb  llmodel0.ipynb
lbfgs/: lbfgs.ipynb  nlcgex.ipynb
